--- a/languages/zh-Hans.yml
+++ b/languages/zh-Hans.yml
@@ -16,6 +16,7 @@ menu:
   schedule: 日程表
   sitemap: 站点地图
   commonweal: 公益404
+  book: 书籍
 
 sidebar:
   overview: 站点概览
@@ -46,8 +47,8 @@ page:
   tags: 标签
 
 footer:
-  powered: "由 %s 强力驱动"
-  theme: 主题
+  powered: "楞头青年"
+  theme: 带头冲锋
 
 counter:
   tag_cloud:
